# LINALG-Space

./: .clang-format  CMakeLists.txt  README.md
assets/: bullet.txt  rocket.txt  target.txt  tree.txt
cmake/: FindSDL2.cmake
src/: CMakeLists.txt  main.cpp
src/math/: Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  utils.cpp  utils.hpp
src/model/: OBJParser.cpp  OBJParser.hpp
src/parser/: OBJParser.cpp  OBJParser.hpp
src/sdl/: Color.cpp  Color.hpp  SDLWrapper.cpp  SDLWrapper.hpp
src/util/: VectorRotationUtil.cpp  VectorRotationUtil.hpp
src/world/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  Matrix.cpp  Matrix.hpp  Object.cpp  Object.hpp  OrbitingCamera.cpp  OrbitingCamera.hpp  Polygon.cpp  Polygon.h  Polygon.hpp  Renderer.cpp  Renderer.hpp  SpaceRenderer.cpp  SpaceRenderer.hpp  Vector.cpp  Vector.hpp  World.cpp  World.h  World.hpp
src/world/entity/: Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  SpaceShip.cpp  SpaceShip.hpp  Target.cpp  Target.hpp
tests/: CMakeLists.txt  Example-test.cpp
tests/world/: Matrix-test.cpp  VectorRotationUtil-test.cpp
